--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "test": "jest --testEnvironment=jsdom --config=jest.config.js"
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
@@ -31,9 +32,10 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-table": "^8.10.7",
     "@types/node": "20.8.10",
-    "@types/react": "18.2.36",
+    "@types/react": "^18.2.38",
     "@types/react-dom": "18.2.14",
     "@uploadthing/react": "^5.7.0",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
@@ -66,14 +68,15 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/bcrypt": "^5.0.1",
-    "@types/jest": "^29.5.8",
     "daisyui": "^4.0.8",
-    "jest": "^29.7.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.0.1",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "prisma": "^5.5.2",
     "ts-jest": "^29.1.1"
   }
