fix head  metatag

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/bcrypt": "^5.0.1",
+    "cypress": "^13.6.0",
     "daisyui": "^4.0.8",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-testing-library": "^6.0.1",
